maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:16: error: not found: value somAngle
  if ( estFaceMur() && somAngle == 0 ){
                       ^Escaper:30: error: not found: value avanve
    avanve();
    ^